bin/ast.output
   0  $accept : %entry% $end

   1  rust_file : COMMENT rust_file
   2            | fn_def rust_file
   3            | EOF

   4  fn_def : FN IDENT LPARAN fn_args RPARAN block
   5         | FN IDENT LPARAN fn_args RPARAN ARROW typ block

   6  fn_args : fn_args_sub
   7          |

   8  fn_args_sub : fn_arg COMMA fn_args_sub
   9              | fn_arg

  10  fn_arg : IDENT COLLON typ

  11  typ : LPARAN RPARAN
  12      | INT_T
  13      | FN LPARAN maybe_typs RPARAN ARROW typ

  14  maybe_typs : typs
  15             |

  16  typs : typ COMMA typs
  17       | typ

  18  statement : LET IDENT EQ expression
  19            | expression

  20  statements : statement SEMICOLLON statements
  21             | statement
  22             | statement SEMICOLLON

  23  maybe_statements :
  24                   | statements

  25  block : LBRACE maybe_statements RBRACE

  26  atom_expression : LPARAN RPARAN
  27                  | IDENT
  28                  | INT
  29                  | ifthenelse
  30                  | atom_expression LPARAN maybe_expressions RPARAN
  31                  | LPARAN expression RPARAN

  32  expression : atom_expression
  33             | expression PLUS expression
  34             | expression MINUS expression
  35             | expression MULTIPLY atom_expression
  36             | expression DIVIDE expression
  37             | expression LANGLE expression
  38             | expression RANGLE expression
  39             | expression LANGLE_EQ expression
  40             | expression RANGLE_EQ expression
  41             | expression LONG_EQ expression
  42             | MINUS expression
  43             | block

  44  maybe_expressions :
  45                    | expressions

  46  expressions : expression COMMA expressions
  47              | expression

  48  ifthenelse : IF expression block ELSE ifthenelse
  49             | IF expression block ELSE block
  50             | IF expression block

  51  ptr_list : FN_PTR
  52           | FN_PTR COMMA ptr_list

  53  atom_ir_term : LPARAN ir_term RPARAN
  54               | IDENT
  55               | TOTAL
  56               | DIVERGENT
  57               | INT_T
  58               | INT
  59               | FN_PTR
  60               | PROPOSITION
  61               | TYPE
  62               | PRE_TYPE
  63               | KIND LSQBR INT RSQBR
  64               | COMPUTATION_KIND
  65               | PREDICATE
  66               | atom_ir_term LANGLE ir_term RANGLE
  67               | REC LSQBR ptr_list RSQBR LSQBR INT RSQBR
  68               | MAX_COMP_KIND LPARAN ir_term COMMA ir_term RPARAN
  69               | AND_INTRO LPARAN ir_term COMMA ir_term RPARAN
  70               | OR_INTRO_L LPARAN ir_term COMMA ir_term RPARAN
  71               | OR_INTRO_R LPARAN ir_term COMMA ir_term RPARAN
  72               | AND_ELIM_L LPARAN ir_term COMMA ir_term RPARAN
  73               | AND_ELIM_R LPARAN ir_term COMMA ir_term RPARAN
  74               | EQ_INTRO LPARAN ir_term COMMA ir_term RPARAN
  75               | OR_ELIM LPARAN ir_term COMMA ir_term COMMA ir_term RPARAN
  76               | FN_PTR_TYPE LSQBR ir_term RSQBR
  77               | DEREF_FN_PTR LSQBR ir_term RSQBR
  78               | TRUTH
  79               | PROOF_OF_TRUTH
  80               | FALSITY
  81               | EQ_ELIM LPARAN ir_term COMMA ir_term COMMA ir_term RPARAN
  82               | FALSE_ELIM_PROP LPARAN ir_term COMMA ir_term RPARAN
  83               | FALSE_ELIM_TYPE LPARAN ir_term COMMA ir_term RPARAN

  84  app_ir_term : app_ir_term atom_ir_term
  85              | atom_ir_term

  86  arith_ir_term : app_ir_term
  87                | MINUS arith_ir_term
  88                | arith_ir_term PLUS arith_ir_term
  89                | arith_ir_term MINUS arith_ir_term
  90                | arith_ir_term MULTIPLY app_ir_term
  91                | arith_ir_term PROPOR arith_ir_term
  92                | arith_ir_term PROPAND app_ir_term
  93                | FORALL IDENT COLLON ir_term DOT arith_ir_term
  94                | app_ir_term ARROW arith_ir_term
  95                | arith_ir_term EQ arith_ir_term TYPE_HINT app_ir_term

  96  abs_ir_term : arith_ir_term
  97              | SLASH IDENT COLLON ir_term DOT abs_ir_term

  98  ir_term : abs_ir_term
  99          | abs_ir_term SEMICOLLON ir_term

 100  def_arg : LPARAN IDENT COLLON ir_term RPARAN

 101  def_args : def_arg def_args
 102           | def_arg

 103  toplevel_precommand : QUIT
 104                      | RESET
 105                      | AXIOM IDENT COLLON ir_term
 106                      | TC_IR_TERM ir_term
 107                      | IR_DEFINITION IDENT def_args EQ ir_term
 108                      | IR_PRINT_DEFINITION IDENT

 109  toplevel_command : toplevel_precommand DOT

 110  maybe_toplevel_command : toplevel_command
 111                         | EOF

 112  %entry% : '\001' rust_file
 113          | '\002' expression
 114          | '\003' ir_term
 115          | '\004' toplevel_command
 116          | '\005' maybe_toplevel_command

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	.  error

	%entry%  goto 6


state 1
	%entry% : '\001' . rust_file  (112)

	COMMENT  shift 7
	EOF  shift 8
	FN  shift 9
	.  error

	rust_file  goto 10
	fn_def  goto 11


state 2
	%entry% : '\002' . expression  (113)

	INT  shift 12
	IDENT  shift 13
	MINUS  shift 14
	LPARAN  shift 15
	LBRACE  shift 16
	IF  shift 17
	.  error

	expression  goto 18
	block  goto 19
	atom_expression  goto 20
	ifthenelse  goto 21


state 3
	%entry% : '\003' . ir_term  (114)

	TRUTH  shift 22
	FALSITY  shift 23
	INT  shift 24
	IDENT  shift 25
	FN_PTR  shift 26
	MINUS  shift 27
	LPARAN  shift 28
	INT_T  shift 29
	TOTAL  shift 30
	DIVERGENT  shift 31
	MAX_COMP_KIND  shift 32
	FORALL  shift 33
	SLASH  shift 34
	PROPOSITION  shift 35
	TYPE  shift 36
	PRE_TYPE  shift 37
	KIND  shift 38
	COMPUTATION_KIND  shift 39
	PREDICATE  shift 40
	REC  shift 41
	AND_INTRO  shift 42
	OR_INTRO_L  shift 43
	OR_INTRO_R  shift 44
	AND_ELIM_L  shift 45
	AND_ELIM_R  shift 46
	OR_ELIM  shift 47
	EQ_INTRO  shift 48
	EQ_ELIM  shift 49
	FALSE_ELIM_PROP  shift 50
	FALSE_ELIM_TYPE  shift 51
	FN_PTR_TYPE  shift 52
	DEREF_FN_PTR  shift 53
	PROOF_OF_TRUTH  shift 54
	.  error

	ir_term  goto 55
	atom_ir_term  goto 56
	app_ir_term  goto 57
	arith_ir_term  goto 58
	abs_ir_term  goto 59


state 4
	%entry% : '\004' . toplevel_command  (115)

	QUIT  shift 60
	RESET  shift 61
	AXIOM  shift 62
	TC_IR_TERM  shift 63
	IR_DEFINITION  shift 64
	IR_PRINT_DEFINITION  shift 65
	.  error

	toplevel_command  goto 66
	toplevel_precommand  goto 67


state 5
	%entry% : '\005' . maybe_toplevel_command  (116)

	EOF  shift 68
	QUIT  shift 60
	RESET  shift 61
	AXIOM  shift 62
	TC_IR_TERM  shift 63
	IR_DEFINITION  shift 64
	IR_PRINT_DEFINITION  shift 65
	.  error

	toplevel_command  goto 69
	maybe_toplevel_command  goto 70
	toplevel_precommand  goto 67


state 6
	$accept : %entry% . $end  (0)

	$end  accept


state 7
	rust_file : COMMENT . rust_file  (1)

	COMMENT  shift 7
	EOF  shift 8
	FN  shift 9
	.  error

	rust_file  goto 71
	fn_def  goto 11


state 8
	rust_file : EOF .  (3)

	.  reduce 3


state 9
	fn_def : FN . IDENT LPARAN fn_args RPARAN block  (4)
	fn_def : FN . IDENT LPARAN fn_args RPARAN ARROW typ block  (5)

	IDENT  shift 72
	.  error


state 10
	%entry% : '\001' rust_file .  (112)

	.  reduce 112


state 11
	rust_file : fn_def . rust_file  (2)

	COMMENT  shift 7
	EOF  shift 8
	FN  shift 9
	.  error

	rust_file  goto 73
	fn_def  goto 11


state 12
	atom_expression : INT .  (28)

	.  reduce 28


state 13
	atom_expression : IDENT .  (27)

	.  reduce 27


state 14
	expression : MINUS . expression  (42)

	INT  shift 12
	IDENT  shift 13
	MINUS  shift 14
	LPARAN  shift 15
	LBRACE  shift 16
	IF  shift 17
	.  error

	expression  goto 74
	block  goto 19
	atom_expression  goto 20
	ifthenelse  goto 21


state 15
	atom_expression : LPARAN . RPARAN  (26)
	atom_expression : LPARAN . expression RPARAN  (31)

	INT  shift 12
	IDENT  shift 13
	MINUS  shift 14
	LPARAN  shift 15
	RPARAN  shift 75
	LBRACE  shift 16
	IF  shift 17
	.  error

	expression  goto 76
	block  goto 19
	atom_expression  goto 20
	ifthenelse  goto 21


state 16
	block : LBRACE . maybe_statements RBRACE  (25)
	maybe_statements : .  (23)

	INT  shift 12
	IDENT  shift 13
	LET  shift 77
	MINUS  shift 14
	LPARAN  shift 15
	LBRACE  shift 16
	IF  shift 17
	RBRACE  reduce 23

	expression  goto 78
	block  goto 19
	statement  goto 79
	statements  goto 80
	maybe_statements  goto 81
	atom_expression  goto 20
	ifthenelse  goto 21


state 17
	ifthenelse : IF . expression block ELSE ifthenelse  (48)
	ifthenelse : IF . expression block ELSE block  (49)
	ifthenelse : IF . expression block  (50)

	INT  shift 12
	IDENT  shift 13
	MINUS  shift 14
	LPARAN  shift 15
	LBRACE  shift 16
	IF  shift 17
	.  error

	expression  goto 82
	block  goto 19
	atom_expression  goto 20
	ifthenelse  goto 21


state 18
	expression : expression . PLUS expression  (33)
	expression : expression . MINUS expression  (34)
	expression : expression . MULTIPLY atom_expression  (35)
	expression : expression . DIVIDE expression  (36)
	expression : expression . LANGLE expression  (37)
	expression : expression . RANGLE expression  (38)
	expression : expression . LANGLE_EQ expression  (39)
	expression : expression . RANGLE_EQ expression  (40)
	expression : expression . LONG_EQ expression  (41)
	%entry% : '\002' expression .  (113)

	PLUS  shift 83
	MINUS  shift 84
	MULTIPLY  shift 85
	DIVIDE  shift 86
	LANGLE  shift 87
	RANGLE  shift 88
	LANGLE_EQ  shift 89
	RANGLE_EQ  shift 90
	LONG_EQ  shift 91
	$end  reduce 113


state 19
	expression : block .  (43)

	.  reduce 43


state 20
	atom_expression : atom_expression . LPARAN maybe_expressions RPARAN  (30)
	expression : atom_expression .  (32)

	LPARAN  shift 92
	$end  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	MULTIPLY  reduce 32
	DIVIDE  reduce 32
	LANGLE  reduce 32
	RANGLE  reduce 32
	LANGLE_EQ  reduce 32
	RANGLE_EQ  reduce 32
	LONG_EQ  reduce 32
	SEMICOLLON  reduce 32
	RPARAN  reduce 32
	LBRACE  reduce 32
	RBRACE  reduce 32
	COMMA  reduce 32


state 21
	atom_expression : ifthenelse .  (29)

	.  reduce 29


state 22
	atom_ir_term : TRUTH .  (78)

	.  reduce 78


state 23
	atom_ir_term : FALSITY .  (80)

	.  reduce 80


state 24
	atom_ir_term : INT .  (58)

	.  reduce 58


state 25
	atom_ir_term : IDENT .  (54)

	.  reduce 54


state 26
	atom_ir_term : FN_PTR .  (59)

	.  reduce 59


state 27
	arith_ir_term : MINUS . arith_ir_term  (87)

	TRUTH  shift 22
	FALSITY  shift 23
	INT  shift 24
	IDENT  shift 25
	FN_PTR  shift 26
	MINUS  shift 27
	LPARAN  shift 28
	INT_T  shift 29
	TOTAL  shift 30
	DIVERGENT  shift 31
	MAX_COMP_KIND  shift 32
	FORALL  shift 33
	PROPOSITION  shift 35
	TYPE  shift 36
	PRE_TYPE  shift 37
	KIND  shift 38
	COMPUTATION_KIND  shift 39
	PREDICATE  shift 40
	REC  shift 41
	AND_INTRO  shift 42
	OR_INTRO_L  shift 43
	OR_INTRO_R  shift 44
	AND_ELIM_L  shift 45
	AND_ELIM_R  shift 46
	OR_ELIM  shift 47
	EQ_INTRO  shift 48
	EQ_ELIM  shift 49
	FALSE_ELIM_PROP  shift 50
	FALSE_ELIM_TYPE  shift 51
	FN_PTR_TYPE  shift 52
	DEREF_FN_PTR  shift 53
	PROOF_OF_TRUTH  shift 54
	.  error

	atom_ir_term  goto 56
	app_ir_term  goto 57
	arith_ir_term  goto 93


state 28
	atom_ir_term : LPARAN . ir_term RPARAN  (53)

	TRUTH  shift 22
	FALSITY  shift 23
	INT  shift 24
	IDENT  shift 25
	FN_PTR  shift 26
	MINUS  shift 27
	LPARAN  shift 28
	INT_T  shift 29
	TOTAL  shift 30
	DIVERGENT  shift 31
	MAX_COMP_KIND  shift 32
	FORALL  shift 33
	SLASH  shift 34
	PROPOSITION  shift 35
	TYPE  shift 36
	PRE_TYPE  shift 37
	KIND  shift 38
	COMPUTATION_KIND  shift 39
	PREDICATE  shift 40
	REC  shift 41
	AND_INTRO  shift 42
	OR_INTRO_L  shift 43
	OR_INTRO_R  shift 44
	AND_ELIM_L  shift 45
	AND_ELIM_R  shift 46
	OR_ELIM  shift 47
	EQ_INTRO  shift 48
	EQ_ELIM  shift 49
	FALSE_ELIM_PROP  shift 50
	FALSE_ELIM_TYPE  shift 51
	FN_PTR_TYPE  shift 52
	DEREF_FN_PTR  shift 53
	PROOF_OF_TRUTH  shift 54
	.  error

	ir_term  goto 94
	atom_ir_term  goto 56
	app_ir_term  goto 57
	arith_ir_term  goto 58
	abs_ir_term  goto 59


state 29
	atom_ir_term : INT_T .  (57)

	.  reduce 57


state 30
	atom_ir_term : TOTAL .  (55)

	.  reduce 55


state 31
	atom_ir_term : DIVERGENT .  (56)

	.  reduce 56


state 32
	atom_ir_term : MAX_COMP_KIND . LPARAN ir_term COMMA ir_term RPARAN  (68)

	LPARAN  shift 95
	.  error


state 33
	arith_ir_term : FORALL . IDENT COLLON ir_term DOT arith_ir_term  (93)

	IDENT  shift 96
	.  error


state 34
	abs_ir_term : SLASH . IDENT COLLON ir_term DOT abs_ir_term  (97)

	IDENT  shift 97
	.  error


state 35
	atom_ir_term : PROPOSITION .  (60)

	.  reduce 60


state 36
	atom_ir_term : TYPE .  (61)

	.  reduce 61


state 37
	atom_ir_term : PRE_TYPE .  (62)

	.  reduce 62


state 38
	atom_ir_term : KIND . LSQBR INT RSQBR  (63)

	LSQBR  shift 98
	.  error


state 39
	atom_ir_term : COMPUTATION_KIND .  (64)

	.  reduce 64


state 40
	atom_ir_term : PREDICATE .  (65)

	.  reduce 65


state 41
	atom_ir_term : REC . LSQBR ptr_list RSQBR LSQBR INT RSQBR  (67)

	LSQBR  shift 99
	.  error


state 42
	atom_ir_term : AND_INTRO . LPARAN ir_term COMMA ir_term RPARAN  (69)

	LPARAN  shift 100
	.  error


state 43
	atom_ir_term : OR_INTRO_L . LPARAN ir_term COMMA ir_term RPARAN  (70)

	LPARAN  shift 101
	.  error


state 44
	atom_ir_term : OR_INTRO_R . LPARAN ir_term COMMA ir_term RPARAN  (71)

	LPARAN  shift 102
	.  error


state 45
	atom_ir_term : AND_ELIM_L . LPARAN ir_term COMMA ir_term RPARAN  (72)

	LPARAN  shift 103
	.  error


state 46
	atom_ir_term : AND_ELIM_R . LPARAN ir_term COMMA ir_term RPARAN  (73)

	LPARAN  shift 104
	.  error


state 47
	atom_ir_term : OR_ELIM . LPARAN ir_term COMMA ir_term COMMA ir_term RPARAN  (75)

	LPARAN  shift 105
	.  error


state 48
	atom_ir_term : EQ_INTRO . LPARAN ir_term COMMA ir_term RPARAN  (74)

	LPARAN  shift 106
	.  error


state 49
	atom_ir_term : EQ_ELIM . LPARAN ir_term COMMA ir_term COMMA ir_term RPARAN  (81)

	LPARAN  shift 107
	.  error


state 50
	atom_ir_term : FALSE_ELIM_PROP . LPARAN ir_term COMMA ir_term RPARAN  (82)

	LPARAN  shift 108
	.  error


state 51
	atom_ir_term : FALSE_ELIM_TYPE . LPARAN ir_term COMMA ir_term RPARAN  (83)

	LPARAN  shift 109
	.  error


state 52
	atom_ir_term : FN_PTR_TYPE . LSQBR ir_term RSQBR  (76)

	LSQBR  shift 110
	.  error


state 53
	atom_ir_term : DEREF_FN_PTR . LSQBR ir_term RSQBR  (77)

	LSQBR  shift 111
	.  error


state 54
	atom_ir_term : PROOF_OF_TRUTH .  (79)

	.  reduce 79


state 55
	%entry% : '\003' ir_term .  (114)

	.  reduce 114


state 56
	atom_ir_term : atom_ir_term . LANGLE ir_term RANGLE  (66)
	app_ir_term : atom_ir_term .  (85)
